// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/BreadCrumbs > Segment > should render EMPTY 1`] = `
<div>
  <i>
    &lt;EMPTY&gt;
  </i>
</div>
`;

exports[`components/BreadCrumbs > Segment > should render label 1`] = `
<div>
  Lorem ipsum
</div>
`;

exports[`components/BreadCrumbs > Segment > should render link 1`] = `
<div>
  <a
    class="BreadCrumbs-root"
    href="/a"
  >
    A
  </a>
</div>
`;

exports[`components/BreadCrumbs > render > and end with separator 1`] = `
<div>
  <a
    class="BreadCrumbs-root"
    href="https://quiltdata.com/"
  >
    ROOT
  </a>
   / 
  <a
    class="BreadCrumbs-root"
    href="https://quiltdata.com/a/"
  >
    a
  </a>
   / 
  <a
    class="BreadCrumbs-root"
    href="https://quiltdata.com/a/b"
  >
    b
  </a>
   / 
</div>
`;

exports[`components/BreadCrumbs > render > and make links for every crumb 1`] = `
<div>
  <a
    class="BreadCrumbs-root"
    href="https://quiltdata.com/"
  >
    ROOT
  </a>
   / 
  <a
    class="BreadCrumbs-root"
    href="https://quiltdata.com/a/"
  >
    a
  </a>
   / 
  <a
    class="BreadCrumbs-root"
    href="https://quiltdata.com/a/b"
  >
    b
  </a>
</div>
`;

exports[`components/BreadCrumbs > render > and transform links 1`] = `
<div>
  <a
    class="BreadCrumbs-root"
    href="https://quiltdata.com/"
  >
    ROOT
  </a>
   / 
  <a
    class="BreadCrumbs-root"
    href="https://quiltdata.com/a/"
  >
    a
  </a>
   / 
  b
</div>
`;

exports[`components/BreadCrumbs > render > basic breadcrumbs 1`] = `
<div>
  <a
    class="BreadCrumbs-root"
    to=""
  >
    ROOT
  </a>
   / 
  <a
    class="BreadCrumbs-root"
    href="/aa a/"
  >
    aa a
  </a>
   / 
  <a
    class="BreadCrumbs-root"
    href="/aa a/bb-b/"
  >
    bb-b
  </a>
   / 
  <a
    class="BreadCrumbs-root"
    href="/aa a/bb-b/c/"
  >
    c
  </a>
   / 
  d_d
</div>
`;

exports[`components/BreadCrumbs > render > without root label 1`] = `
<div>
  <a
    class="BreadCrumbs-root"
    href="/a/"
  >
    a
  </a>
   / 
  <a
    class="BreadCrumbs-root"
    href="/a/b/"
  >
    b
  </a>
   / 
  c
</div>
`;
